--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.ANDANDROID"
         tools:targetApi="31">
         <activity
+            android:name=".presentation.ui.auth.LoginActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.auth.RegisterActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
