--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,21 +15,24 @@
         tools:targetApi="31">
         <activity
             android:name=".presentation.ui.auth.LoginActivity"
-            android:exported="false" />
-        <activity
-            android:name=".presentation.ui.auth.RegisterActivity"
-            android:exported="false" />
-        <activity
-            android:name=".MainActivity"
-            android:exported="true"
-            android:label="@string/app_name"
-            android:theme="@style/Theme.ANDANDROID">
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity
+            android:name=".presentation.ui.auth.RegisterActivity"
+            android:exported="false" />
+        <activity
+            android:name=".presentation.ui.my.MyActivity"
+            android:exported="false" />
+        <activity
+            android:name=".MainActivity"
+            android:exported="true"
+            android:label="@string/app_name"
+            android:theme="@style/Theme.ANDANDROID"/>
     </application>
 
 </manifest>
